# spectemu

./: ChangeLog  Makefile.dos  Makefile.in  README  README.Z80  README.binfmt_misc  TODO  acconfig.h  akey.h  ax.c  ax.h  bin_to_c.c  compr.c  compr.h  config.dos  config.h  config.h.in  configure  configure.in  example.cfg  i386def.S  i386op1.S  i386op1x.S  i386op2.S  i386op2x.S  i386op3.S  i386op3x.S  i386op4.S  i386op5.S  i386op6.S  i386sp.S  i386step.S  interf.c  interf.h  keynames.c  load_z80.c  main.cpp  mask.xbm  memdmps.c  memdmps.h  (+91 more)
debian/: README.Debian  README.source  changelog  control  copyright  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst  postrm  preinst.ex  prerm.ex  rules  substvars  watch.ex
patch/: readline-2.2.patch  spectemu-mysql.patch  svgakey-1.2.10.patch
utils/: Makefile  filt.c  recs.c  spload.cc  spt2tap.c  tap2spt.c  tapef_p.h  tapefile.h  taplist.c  tzxlist.c
utils/spconv/: Makefile  author.doc  history.doc  spconv.c  spconv.h
